fixed align center and email placeholder colour balck

--- a/style.css
+++ b/style.css
@@ -83,7 +83,12 @@ p {
 .p3 {
   color: #fff;
   font-size: 18px;
+  text-align: center;
+  
   font-family: "Hk Grotesk", sans-serif;
+}
+.p3-text{
+padding-top: 10px;
 }
 .section2{
   font-size: 194.004px;
@@ -307,7 +312,7 @@ form.subscribe-form {
   overflow: hidden;
 }
 .subscribe-css-email-field {
-  color: #ccc;
+  color: rgb(13, 13, 13);
   margin: 10px 0;
   padding: 15px 20px;
   width: 35%;
